--- a/dashboard/views/hpu.html
+++ b/dashboard/views/hpu.html
@@ -1,4 +1,15 @@
-
+<style>
+    .col-md-4>.patac-portlet > .portlet-title {
+        margin-bottom: 0;
+    }
+    .portlet-body>.row{
+        position: relative;
+        top:-20px;
+    }
+    #bar4,#bar3{
+        top:-42px;
+    }
+</style>
 <!-- BEGIN PAGE CONTENT-->
 <div class="row">
     <div class="col-md-8">
@@ -130,7 +141,7 @@
                             </tbody>
                         </table>
                         
-                    <div id="bar1" style="height:200px;display:none"></div>
+                    <div id="bar1" style="height:150px;display:none"></div>
                 </div>
                 </div>
             </div>
@@ -140,7 +151,7 @@
     
     <div class="col-md-4">
 
-        <div class="portlet patac-portlet ">
+        <div class="portlet patac-portlet " style="height: 400px">
             <div class="portlet-title">
                 <div class="caption">
                     <span class="caption-subject font-white uppercase">水口温度</span>
@@ -162,7 +173,7 @@
                                 <div class="desc"> 进水口温度 </div>
                             </div>
                         </a> -->
-                         <div id="waterIn" style="height:200px;"></div>
+                         <div id="waterIn" style="height:180px;"></div>
                         
                     </div>
                     <div class="col-lg-6 col-md-12 col-sm-6 col-xs-12">
@@ -178,7 +189,7 @@
                                     <div class="desc"> 出水口温度 </div>
                                 </div>
                             </a> -->
-                        <div id="waterOut" style="height:200px;"></div>
+                        <div id="waterOut" style="height:180px;"></div>
                     </div>
                     
                 </div>
@@ -188,7 +199,7 @@
 
         </div>
 
-        <div class="portlet patac-portlet ">
+        <div class="portlet patac-portlet " style="height: 400px">
             <div class="portlet-title">
                 <div class="caption">
                     <span class="caption-subject font-white uppercase">油口温度</span>
@@ -212,7 +223,7 @@
                                 <div class="desc"> 进油口温度 </div>
                             </div>
                         </a> -->
-                        <div id="oilIn" style="height:200px;"></div>
+                        <div id="oilIn" style="height:180px;"></div>
                     </div>
                     <div class="col-lg-6 col-md-12 col-sm-6 col-xs-12">
                         <!-- <a class="dashboard-stat dashboard-stat-v2 blue" href="#">
@@ -228,7 +239,7 @@
                                 </div>
                             </a> -->
 
-                        <div id="oilOut" style="height:200px;"></div>
+                        <div id="oilOut" style="height:180px;"></div>
                     </div>
                     
                 </div>
