--- a/dashboard/views/admin-user.html
+++ b/dashboard/views/admin-user.html
@@ -86,18 +86,16 @@
                                         <div class="col-md-4 col-sm-4">
                                              <div class="form-group form-md-line-input">
                                                 <input type="text" class="form-control" name="employeeId" id="employeeId" placeholder="请输入员工号"
-                                                ng-model="data.employeeId" required>
+                                                ng-model="data.employeeId">
                                                 <label for="employeeId">员工号
-                                                    <span class="required"> * </span>
                                                 </label>
                                             </div>
                                         </div>
                                         <div class="col-md-4 col-sm-4">
                                             <div class="form-group form-md-line-input">
                                                 <input type="text" class="form-control" id="email" name="email" placeholder="请输入电子邮箱"
-                                                ng-model="data.email" required email>
+                                                ng-model="data.email" >
                                                 <label for="email">电子邮箱
-                                                    <span class="required"> * </span>
                                                 </label>
                                             </div>
                                         </div>
@@ -115,22 +113,20 @@
                                         <div class="col-md-4 col-sm-4">
                                             <div class="form-group form-md-line-input">
                                                 <input type="text" class="form-control" id="enName" name="enName" placeholder="请输入英文名"
-                                                ng-model="data.enName" required>
+                                                ng-model="data.enName">
                                                 <label for="enName">英文名
-                                                    <span class="required"> * </span>
                                                 </label>
                                             </div>
                                         </div>
                                         <div class="col-md-4 col-sm-4">
                                             <div class="form-group form-md-line-input ">
                                                 <select class="form-control" name="gender" id="gender"
-                                                    ng-model="data.gender" required>
+                                                    ng-model="data.gender" >
                                                     <option value="1" selected="selected">男</option>
                                                     <option value="0">女</option>
                                                 </select>
                                                 
                                                 <label for="gender">性别
-                                                    <span class="required"> * </span>
                                                 </label>
                                             </div>
                                         </div>
