--- a/dashboard/views/admin-role.html
+++ b/dashboard/views/admin-role.html
@@ -71,7 +71,7 @@
                             <div class="portlet-body">
                                 <div class="form-body">
                                     <div class="row">
-                                        <div class="col-md-4 col-sm-4">
+                                        <div class="col-md-3 col-sm-3">
                                             <div class="form-group form-md-line-input">
                                                 <input type="text" class="form-control" name="roleName" id="resourceName" placeholder="请输入角色名"
                                                 ng-model="data.roleName" required>
@@ -80,32 +80,34 @@
                                                 </label>
                                             </div>
                                         </div>
-                                        <div class="col-md-4  col-sm-4">
+                                        <div class="col-md-3  col-sm-3">
                                              <div class="form-group form-md-line-input">
                                                 <input type="text" class="form-control" name="resourceIds" id="resourceIds" placeholder="请输入资源号"
                                                 ng-model="data.resourceIds" >
                                                 <label for="resourceIds">资源号
-                                                    <span class="required"> * </span>
                                                 </label>
                                             </div>
                                         </div>
-                                        <div class="col-md-4 col-sm-4">
+                                        <div class="col-md-3 col-sm-3">
                                             <div class="form-group form-md-line-input">
                                                 <input type="text" class="form-control" id="templateSecurity" name="templateSecurity" placeholder="请输入临时权限"
                                                 ng-model="data.templateSecurity" >
                                                 <label for="templateSecurity">模板权限
-                                                    <span class="required"> * </span>
                                                 </label>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-3 col-sm-3">
+                                            <div class="form-group form-md-line-input">
+                                                <input type="text" class="form-control" id="roleDesc" name="roleDesc" placeholder="请输入角色描述限"
+                                                ng-model="data.roleDesc" >
+                                                <label for="roleDesc">角色描述</label>
                                             </div>
                                         </div>
                                     </div>
                                     
-                                    <div class="form-group form-md-line-input">
-                                        <textarea rows="4" class="form-control" id="roleDesc" name="roleDesc" rows="3" ng-model="data.roleDesc" placeholder="请输入角色描述"></textarea>
-                                        <label for="roleDesc">角色描述</label>
-                                    </div>
+                                    
 
-                                     <div class="row">
+                                    <div class="row">
                                     <div class="col-md-12">
                                         <div class="portlet light ">
                                             <div class="portlet-title">
