--- a/dashboard/views/lab.html
+++ b/dashboard/views/lab.html
@@ -59,7 +59,7 @@
                 </div>
                 
             </div>
-            <div class="portlet-body">
+            <div class="portlet-body" style="margin-top: 21px;">
 
                 <div class="row">
                 <div class="col-md-6  col-sm-6 form-group"><button class="btn btn-lg btn-block green patac-btn"><i class="fa fa-cogs"></i> 运行 <span ng-bind="status[1]">0</span>台</button></div>
