--- a/dashboard/views/mts.html
+++ b/dashboard/views/mts.html
@@ -81,13 +81,13 @@
                 <div class="caption">
                     <span class="caption-subject font-white uppercase">Station日志</span>
                 </div>
-               
+                <div class="btn-group btn-group-circle pull-right">
+                    <button ng-click="getWarnning('Station','warning')" class="btn btn-sm  white active">报警</button>
+                    <button ng-click="getWarnning('Station','normal')" class="btn  btn-sm white">其他</button>
+                </div>
             </div>
             <div class="portlet-body">
-                <div class="btn-group btn-group-circle">
-                    <button ng-click="getWarnning('Station','warning')" class="btn  white active">报警</button>
-                    <button ng-click="getWarnning('Station','normal')" class="btn   white">其他</button>
-                </div>
+
                 <table class="table table-striped table-bordered table-checkable order-column m-t-lg hide" id="station">
                     <thead>
                         <tr>
@@ -121,12 +121,15 @@
                                 MPT
                     </button>
                 </div>
+                <div class="btn-group btn-group-circle pull-right">
+                    <!--<div class="btn-group btn-group-circle">-->
+                        <button ng-click="getWarnning('RPC','warning')" class="btn btn-sm white active">报警</button>
+                        <button ng-click="getWarnning('RPC','normal')" class="btn btn-sm white">其他</button>
+                    <!--</div>-->
+                </div>
             </div>
             <div class="portlet-body">
-                <div class="btn-group btn-group-circle">
-                    <button ng-click="getWarnning('RPC','warning')" class="btn white active">报警</button>
-                    <button ng-click="getWarnning('RPC','normal')" class="btn  white">其他</button>
-                </div>
+
                 <table class="table table-striped table-bordered table-checkable order-column m-t-lg hide" id="rpc">
                     <thead>
                         <tr>
