hotfix: admin delete

--- a/dashboard/views/admin-resource.html
+++ b/dashboard/views/admin-resource.html
@@ -52,7 +52,7 @@
                             <td ng-bind="data.modifyUser"></td>
                             <td>
                                 <button class="btn btn-outline white" action="edit" data-id="{{data.id}}" data-toggle="modal" href="#draggable" ng-click="upData($event)">修改</button>
-                                <button class="btn btn-danger" action="delete" data-id="{{data.id}}" ng-click="delete(data.id)">删除</button>
+                                <button class="btn btn-danger" action="delete" data-id="{{data.id}}" ng-click="delData(d.id)">删除</button>
                             </td>
                         </tr>
                         
