--- a/dashboard/views/admin-resource.html
+++ b/dashboard/views/admin-resource.html
@@ -27,7 +27,7 @@
             </div>
             <div class="portlet-body">
                 
-                <table class="table table-striped table-bordered table-hover table-checkable order-column hide" id="resource">
+                <table class="table table-striped table-bordered table-checkable order-column hide" id="resource">
                     <thead>
                         <tr>
                            <!--  <th></th> -->
