--- a/dashboard/views/admin-role.html
+++ b/dashboard/views/admin-role.html
@@ -26,7 +26,7 @@
             </div>
             <div class="portlet-body">
 
-                <table class="table table-striped table-bordered table-hover table-checkable order-column hide" id="role">
+                <table class="table table-striped table-bordered table-checkable order-column hide" id="role">
                     <thead>
                         <tr>
                             <th><input type="checkbox" class="group-checkable" data-set="#role .checkboxes" /></th>
