--- a/dashboard/views/admin-user.html
+++ b/dashboard/views/admin-user.html
@@ -26,7 +26,7 @@
             </div>
             <div class="portlet-body">
                 
-                <table class="table table-striped table-bordered table-hover table-checkable order-column hide" id="user">
+                <table class="table table-striped table-bordered table-checkable order-column hide" id="user">
                     <thead>
                         <tr>
                             <!-- <th><input type="checkbox" class="group-checkable" data-set="#user .checkboxes" /></th> -->
@@ -35,6 +35,7 @@
                             <th> 英文名 </th>
                             <th> 员工号 </th>
                             <th> 电子邮箱 </th>
+                            <th> 状态 </th>
                             <th> 操作 </th>
                         </tr>
                     </thead>
@@ -46,9 +47,10 @@
                             <td ng-bind="d.enName"></td>
                             <td ng-bind="d.employeeId"></td>
                             <td ng-bind="d.email"></td>
+                            <td ng-bind="d.status | userStatus"></td>
                             <td>
                                 <button class="btn btn-outline white" action="edit" data-id="{{d.id}}" data-toggle="modal" href="#draggable" ng-click="upDataUser($event)">修改</button>
-                                <button class="btn btn-danger" action="delete" data-id="{{d.id}}" ng-click="delData($event)">删除</button>
+                                <button class="btn btn-danger" action="delete" data-id="{{d.id}}" ng-click="delData(d.id)">删除</button>
                             </td>
                         </tr>
                         
@@ -101,7 +103,7 @@
                                         </div>
                                     </div>
                                     <div class="row">
-                                        <div class="col-md-4 col-sm-4">
+                                        <div class="col-md-6 col-sm-6">
                                             <div class="form-group form-md-line-input">
                                                 <input type="text" class="form-control" id="realName" name="realName" placeholder="请输入中文名"
                                                 ng-model="data.realName" required>
@@ -110,7 +112,7 @@
                                                 </label>
                                             </div>
                                         </div>
-                                        <div class="col-md-4 col-sm-4">
+                                        <div class="col-md-6 col-sm-6">
                                             <div class="form-group form-md-line-input">
                                                 <input type="text" class="form-control" id="enName" name="enName" placeholder="请输入英文名"
                                                 ng-model="data.enName">
@@ -118,23 +120,6 @@
                                                 </label>
                                             </div>
                                         </div>
-                                        <div class="col-md-4 col-sm-4">
-                                            <div class="form-group form-md-line-input ">
-                                                <select class="form-control" name="gender" id="gender"
-                                                    ng-model="data.gender" >
-                                                    <option value="1" selected="selected">男</option>
-                                                    <option value="0">女</option>
-                                                </select>
-                                                
-                                                <label for="gender">性别
-                                                </label>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    
-                                    <div class="form-group form-md-line-input">
-                                        <textarea rows="2" class="form-control" id="userDesc" name="userDesc" ng-model="data.userDesc"></textarea>
-                                        <label for="userDesc">员工简介</label>
                                     </div>
 
                                 </div>
