--- a/dashboard/views/bep.html
+++ b/dashboard/views/bep.html
@@ -127,8 +127,8 @@
                     </thead>
                     <tbody>
                     <tr>
-                        <td><div class="hpu-label"><span ng-bind="getIndexMomentBEP.vehicleWeight | number:2"></span>kg</div></td>
-                        <td><div class="hpu-label"><span ng-bind="getIndexMomentBEP.grade | number:2"></span></div></td>
+                        <td><div class="hpu-label"><span ng-bind="getIndexMomentBEP.vehicleWeight | number:2"></span></div></td>
+                        <td><div class="hpu-label"><span ng-bind="getIndexMomentBEP.grade | number:2"></span>kg</div></td>
 
                     </tr>
                     </tbody>
