--- a/dashboard/views/bep.html
+++ b/dashboard/views/bep.html
@@ -145,7 +145,7 @@
                 
             </div>
             <div class="portlet-body">
-                
+                <div class="dtable-scrollable">
                 <table class="table table-bordered patac-table table-condensed">
                     <thead>
                         <tr>
@@ -179,6 +179,7 @@
                     </tbody>
                 </table>
             </div>
+            </div>
         </div>
 
         <div class="portlet patac-portlet">
@@ -193,14 +194,14 @@
                 <table class="table table-bordered table-hover order-column" id="warningBEP" style="background: rgba(255,255,255,0);color:#fff">
                     <thead>
                         <tr>
-                            <th> 信息 </th>
                             <th> 时间 </th>
+                            <th> 信息 </th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr  ng-repeat="warning in getWarnningBEP" on-repeat-finished>
-                            <td> {{warning.text}} </td>
                             <td ng-bind="warning.time | date:'MM-dd HH:mm:ss' ">  </td>
+                            <td> {{warning.text}} </td>
                         </tr>
                     </tbody>
                 </table>
