--- a/dashboard/views/bep.html
+++ b/dashboard/views/bep.html
@@ -7,7 +7,7 @@
         min-height: 10px;
     }
     .col-md-4 .portlet > .portlet-title > .caption{
-        padding:0;
+        padding:2px 0;
     }
     .col-md-4 .table-condensed > thead > tr > th{
         padding: 0;
@@ -77,7 +77,7 @@
                         </tbody>
                     </table>
 
-                    <div id="bar1" style="height:240px;"></div>
+                    <div id="bar1" style="height:215px;"></div>
                 </div>
                 </div>
             </div>
