compress table padding

--- a/dashboard/views/mts.html
+++ b/dashboard/views/mts.html
@@ -1,4 +1,8 @@
-
+<style>
+    table.dataTable tbody th, table.dataTable tbody td {
+        padding:2px 2px;
+    }
+</style>
 <!-- BEGIN PAGE CONTENT-->
 <div class="row">
     <div class="col-md-8">
