--- a/dashboard/views/bep.html
+++ b/dashboard/views/bep.html
@@ -15,6 +15,9 @@
     .col-md-4 .portlet.patac-portlet {
         padding: 12px 20px 12.1px;
     }
+    table.dataTable tbody th, table.dataTable tbody td {
+        padding: 4px 4px;
+    }
 </style>
 <!-- BEGIN PAGE CONTENT-->
 <div class="row">
@@ -182,7 +185,7 @@
             </div>
         </div>
 
-        <div class="portlet patac-portlet">
+        <div class="portlet patac-portlet" style="height: 365px;">
             <div class="portlet-title">
                 <div class="caption">
                     <span class="caption-subject uppercase font-white">报警信息 </span>
