--- a/dashboard/views/admin-resource.html
+++ b/dashboard/views/admin-resource.html
@@ -3,7 +3,7 @@
     <ul class="page-breadcrumb">
         <li>
             <i class="icon-home font-white"></i>
-            <span class="font-white">系统管理</span>
+            <span class="font-white">权限配置</span>
             <i class="fa fa-angle-right"></i>
         </li>
         <li>
