--- a/dashboard/views/admin-user.html
+++ b/dashboard/views/admin-user.html
@@ -3,12 +3,12 @@
     <ul class="page-breadcrumb">
         <li>
             <i class="icon-home font-white"></i>
-            <span class="font-white">系统管理</span>
+            <span class="font-white">权限配置</span>
             <i class="fa fa-angle-right"></i>
         </li>
         <li>
             <i class="font-white"></i>
-            <a ui-sref="admin.user" class="font-white">用户权限管理</a>
+            <a ui-sref="admin.user" class="font-white">用户管理</a>
         </li>
     </ul>
 </div>
