--- a/dashboard/views/admin-warning.html
+++ b/dashboard/views/admin-warning.html
@@ -106,7 +106,7 @@
                                     </div> -->
 
                                     <div class="form-group form-md-line-input">
-                                        <textarea rows="4" class="form-control" id="email" name="email" rows="3" ng-model="data.email" email></textarea>
+                                        <textarea rows="4" class="form-control" id="email" name="email" rows="3" ng-model="temp.email" email></textarea>
                                         <label for="email">通知邮箱</label>
                                     </div>
                                     
