--- a/dashboard/views/admin-log.html
+++ b/dashboard/views/admin-log.html
@@ -29,6 +29,7 @@
                     <thead>
                         <tr>
                             <th> 设备号</th>
+                            <th> 设备名称</th>
                             <th> 通知邮箱 </th>
                             <th> 是否有效 </th>
                             <th> 操作</th>
@@ -37,6 +38,7 @@
                     <tbody>
                         <tr class="odd gradeX" ng-repeat="data in datas" on-repeat-finished>
                             <td ng-bind="data.eqptNo"></td>
+                            <td ng-bind="data.eqptName"></td>
                             <td ng-bind="data.email"></td>
                             <td ng-bind="data.isEffective | userStatus"></td>
                             <td>
@@ -84,10 +86,11 @@
                                             </div>
                                         </div>
                                         <div class="col-md-4">
-                                            <div class="form-group form-md-line-input">
-                                                <input type="checkbox" class="form-control" id="isEffective" name="isEffective" placeholder="请输入下限值"
-                                                ng-model="temp.isEffective">
-                                                <label for="isEffective">是否有效
+                                            <div class="form-inline form-md-line-input">
+                                                <label for="isEffective">
+                                                <input type="checkbox" class="form-control" id="isEffective" name="email" placeholder="请输入下限值"
+                                                ng-checked="temp.isEffective" ng-click="aa1($event)" ng-true-value="1" ng-false-value="0" style="position: relative;top:-2px;"/>
+                                                是否有效
                                                 </label>
                                             </div>
                                         </div>
