--- a/dashboard/views/admin-log.html
+++ b/dashboard/views/admin-log.html
@@ -69,7 +69,7 @@
                             <div class="portlet-body">
                                 <div class="form-body">
                                     <div class="row">
-                                        <div class="col-md-4">
+                                        <div class="col-md-3">
                                             <div class="form-group form-md-line-input">
                                                 <input type="text" class="form-control" name="eqptNo" id="eqptNo" placeholder="请输入设备编号"
                                                 ng-model="temp.eqptNo" disabled>
@@ -77,7 +77,15 @@
                                                 </label>
                                             </div>
                                         </div>
-                                        <div class="col-md-4">
+                                        <div class="col-md-3">
+                                            <div class="form-group form-md-line-input">
+                                                <input type="text" class="form-control" name="eqptNo" id="eqptName" placeholder="请输入设备编号"
+                                                       ng-model="temp.eqptName" disabled>
+                                                <label for="eqptNo">设备名称
+                                                </label>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-3">
                                              <div class="form-group form-md-line-input">
                                                 <input type="text" class="form-control" name="email" id="email" placeholder="请输入通知邮箱"
                                                 ng-model="temp.email">
@@ -85,7 +93,7 @@
                                                 </label>
                                             </div>
                                         </div>
-                                        <div class="col-md-4">
+                                        <div class="col-md-2">
                                             <div class="form-inline form-md-line-input">
                                                 <label for="isEffective">
                                                 <input type="checkbox" class="form-control" id="isEffective" name="email" placeholder="请输入下限值"
@@ -95,7 +103,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    
+
                                 </div>
                                 </div>
                             </div>
