--- a/dashboard/views/hpu.html
+++ b/dashboard/views/hpu.html
@@ -124,7 +124,7 @@
                                 </td>
                                 <td>
                                     <div class="hpu-label">
-                                    <span ng-bind="getIndexMomentHPU.waterPressure | number:0">0</span>
+                                    <span ng-bind="getIndexMomentHPU.waterPressure | number:0|waterPressureFilter">0</span>
                                     </div>
                                 </td>
                                 <td>
