--- a/dashboard/views/admin-log.html
+++ b/dashboard/views/admin-log.html
@@ -97,7 +97,7 @@
                                             <div class="form-inline form-md-line-input">
                                                 <label for="isEffective">
                                                 <input type="checkbox" class="form-control" id="isEffective" name="email" placeholder="请输入下限值"
-                                                ng-checked="temp.isEffective" ng-click="aa1($event)" ng-true-value="1" ng-false-value="0" style="position: relative;top:-2px;"/>
+                                                ng-checked="temp.isEffective"  ng-true-value="1" ng-false-value="0" style="position: relative;top:-2px;"/>
                                                 是否有效
                                                 </label>
                                             </div>
