--- a/dashboard/views/lab.html
+++ b/dashboard/views/lab.html
@@ -6,7 +6,7 @@
         <div class="portlet patac-portlet">
             <div class="portlet-title">
                 <div class="caption">
-                    <span class="caption-subject font-white uppercase">重点设备完好率 </span>
+                    <span class="caption-subject font-white uppercase">重点设备完好率(%) </span>
                 </div>
                 
             </div>
@@ -23,7 +23,7 @@
         <div class="portlet patac-portlet">
             <div class="portlet-title">
                 <div class="caption">
-                    <span class="caption-subject font-white uppercase">耐久型设备利用率 </span>
+                    <span class="caption-subject font-white uppercase">耐久型设备利用率(%) </span>
                 </div>
                 
             </div>
@@ -39,7 +39,7 @@
         <div class="portlet patac-portlet">
             <div class="portlet-title">
                 <div class="caption">
-                    <span class="caption-subject font-white uppercase">非耐久型设备利用率 </span>
+                    <span class="caption-subject font-white uppercase">非耐久型设备利用率(%) </span>
                 </div>
                 
             </div>
@@ -84,7 +84,7 @@
         <div class="portlet patac-portlet" >
             <div class="portlet-title">
                 <div class="caption">
-                    <span class="caption-subject font-white uppercase">在线设备开动率 </span>
+                    <span class="caption-subject font-white uppercase">在线设备开动率(%) </span>
                 </div>
                 
             </div>
