--- a/dashboard/views/admin-log.html
+++ b/dashboard/views/admin-log.html
@@ -69,7 +69,7 @@
                             <div class="portlet-body">
                                 <div class="form-body">
                                     <div class="row">
-                                        <div class="col-md-3">
+                                        <div class="col-md-4">
                                             <div class="form-group form-md-line-input">
                                                 <input type="text" class="form-control" name="eqptNo" id="eqptNo" placeholder="请输入设备编号"
                                                 ng-model="temp.eqptNo" disabled>
@@ -77,7 +77,7 @@
                                                 </label>
                                             </div>
                                         </div>
-                                        <div class="col-md-3">
+                                        <div class="col-md-4">
                                             <div class="form-group form-md-line-input">
                                                 <input type="text" class="form-control" name="eqptNo" id="eqptName" placeholder="请输入设备编号"
                                                        ng-model="temp.eqptName" disabled>
@@ -86,24 +86,19 @@
                                             </div>
                                         </div>
                                         <div class="col-md-3">
-                                             <div class="form-group form-md-line-input">
-                                                <input type="text" class="form-control" name="email" id="email" placeholder="请输入通知邮箱"
-                                                ng-model="temp.email">
-                                                <label for="email">邮箱
-                                                </label>
-                                            </div>
-                                        </div>
-                                        <div class="col-md-2">
                                             <div class="form-inline form-md-line-input">
                                                 <label for="isEffective">
                                                 <input type="checkbox" class="form-control" id="isEffective" name="email" placeholder="请输入下限值"
-                                                ng-checked="temp.isEffective"  ng-true-value="1" ng-false-value="0" style="position: relative;top:-2px;"/>
+                                                ng-model="temp.isEffective"  ng-true-value="1" ng-false-value="0" style="position: relative;top:-2px;" />
                                                 是否有效
                                                 </label>
                                             </div>
                                         </div>
                                     </div>
-
+                                    <div class="form-group form-md-line-input">
+                                        <textarea rows="4" class="form-control" id="email" name="email" rows="3" ng-model="temp.email" email></textarea>
+                                        <label for="email">通知邮箱</label>
+                                    </div>
                                 </div>
                                 </div>
                             </div>
