--- a/dashboard/views/admin-warning.html
+++ b/dashboard/views/admin-warning.html
@@ -25,10 +25,11 @@
             </div>
             <div class="portlet-body">
                 
-                <table class="table table-striped table-bordered table-checkable order-column" id="warning">
+                <table class="table table-striped table-bordered order-column" id="warning">
                     <thead>
                         <tr>
                             <th> 设备编码</th>
+                            <th> 设备名称</th>
                             <th> 上限值 </th>
                             <th> 下限值 </th>
                             <th> 通知邮箱 </th>
@@ -39,6 +40,7 @@
                     <tbody>
                         <tr class="odd gradeX" ng-repeat="data in datas" on-repeat-finished>
                             <td ng-bind="data.eqptNo"></td>
+                            <td ng-bind="data.eqptName"></td>
                             <td ng-bind="data.highAlarmVal"></td>
                             <td ng-bind="data.lowAlarmVal"></td>
                             <td ng-bind="data.email"></td>
@@ -99,7 +101,7 @@
                                             <div class="form-inline form-md-line-input">
                                                 <label for="isEffective">
                                                     <input type="checkbox" class="form-control" id="isEffective" name="email" placeholder="请输入下限值"
-                                                           ng-checked="temp.isEffective" ng-true-value="1" ng-false-value="0" style="position: relative;top:-2px;"/>
+                                                           ng-model="temp.isEffective" ng-true-value="1" ng-false-value="0" style="position: relative;top:-2px;"/>
                                                     是否有效
                                                 </label>
                                             </div>
