--- a/dashboard/views/lab.html
+++ b/dashboard/views/lab.html
@@ -62,15 +62,15 @@
             <div class="portlet-body" style="margin-top: 21px;">
 
                 <div class="row">
-                <div class="col-md-6  col-sm-6 form-group"><button class="btn btn-lg btn-block green patac-btn"><i class="fa fa-cogs"></i> 运行 <span ng-bind="status[1]">0</span>台</button></div>
-                    <div class="col-md-6  col-sm-6 form-group"><button class="btn btn-lg btn-block red-intense patac-btn"><i class="fa fa-cogs"></i> 故障 <span ng-bind="status[2]">0</span>台</button></div>
+                <div class="col-md-6  col-sm-6 form-group"><span class="btn btn-lg btn-block green patac-btn"><i class="fa fa-cogs"></i> 运行 <span ng-bind="status[1]">0</span>台</span></div>
+                    <div class="col-md-6  col-sm-6 form-group"><span class="btn btn-lg btn-block red-intense patac-btn"><i class="fa fa-cogs"></i> 故障 <span ng-bind="status[2]">0</span>台</span></div>
                 </div>
                 <div class="row">
-                    <div class="col-md-6  col-sm-6 form-group"><button class="btn btn-lg btn-block blue patac-btn"><i class="fa fa-cogs"></i> 占位 <span ng-bind="status[4]">0</span>台</button></div>
-                    <div class="col-md-6  col-sm-6 form-group"><button class="btn btn-lg btn-block yellow patac-btn"><i class="fa fa-cogs"></i> 停止 <span ng-bind="status[0]">0</span>台</button></div>
+                    <div class="col-md-6  col-sm-6 form-group"><span class="btn btn-lg btn-block blue patac-btn"><i class="fa fa-cogs"></i> 占位 <span ng-bind="status[4]">0</span>台</span></div>
+                    <div class="col-md-6  col-sm-6 form-group"><span class="btn btn-lg btn-block yellow patac-btn"><i class="fa fa-cogs"></i> 停止 <span ng-bind="status[0]">0</span>台</span></div>
                 </div>
                 <div class="row">
-                    <div class="col-md-6  col-sm-6 form-group"><button class="btn btn-lg btn-block gray patac-btn"><i class="fa fa-cogs"></i> 空闲 <span ng-bind="status[3]">0</span>台</button></div>
+                    <div class="col-md-6  col-sm-6 form-group"><span class="btn btn-lg btn-block gray patac-btn" style="background: #DDDDDD"><i class="fa fa-cogs"></i> 空闲 <span ng-bind="status[3]">0</span>台</span></div>
                     <!-- <div class="col-md-6 form-group"><button class="btn btn-lg btn-block red red patac-btn"><i class="fa fa-cogs"></i> 报警 <span ng-bind="status[5]">0</span>台</button></div> -->
                 </div>
             </div>
