--- a/dashboard/views/admin-warning.html
+++ b/dashboard/views/admin-warning.html
@@ -33,7 +33,7 @@
                             <th> 上限值 </th>
                             <th> 下限值 </th>
                             <th> 通知邮箱 </th>
-                            <th> 是否有效 </th>
+                            <th> 报警是否可用 </th>
                             <th> 操作</th>
                         </tr>
                     </thead>
