--- a/dashboard/css/sgm.css
+++ b/dashboard/css/sgm.css
@@ -359,9 +359,9 @@ div.dataTables_wrapper div.dataTables_paginate{
 	margin-bottom:3.5px;
 }
 /*btn style*/
-.btn.green:not(.btn-outline).active, .btn.green:not(.btn-outline):active, .btn.green:not(.btn-outline):hover, .open>.btn.green:not(.btn-outline).dropdown-toggle,.btn.green:not(.btn-outline):active:focus,.btn.green:not(.btn-outline):focus,.btn.green:not(.btn-outline):active:hover {
-	background-color: #32c5d2;
-	border-color: #32c5d2;
+.btn.green:not(.btn-outline).active, .btn.green:not(.btn-outline):active, .btn.green:not(.btn-outline):hover, .open>.btn.green:not(.btn-outline).dropdown-toggle,.btn.green:not(.btn-outline):active:focus,.btn.green:not(.btn-outline):focus,.btn.green:not(.btn-outline):active:hover,.btn.green:not(.btn-outline) {
+	background-color: #31A82C;
+	border-color: #31A82C;
 	outline-offset:0;
 }
 .btn.red-intense:not(.btn-outline).active, .btn.red-intense:not(.btn-outline):active, .btn.red-intense:not(.btn-outline):hover, .open>.btn.red-intense:not(.btn-outline).dropdown-toggle,.btn.red-intense:not(.btn-outline):active:focus, .btn.red-intense:not(.btn-outline):active:hover{
@@ -376,10 +376,10 @@ div.dataTables_wrapper div.dataTables_paginate{
 	border-color: #3598dc;
 	outline-offset:0;
 }
-.portlet-body .btn.yellow:not(.btn-outline).active, .btn.yellow:not(.btn-outline):active, .btn.yellow:not(.btn-outline):hover, .open>.btn.yellow:not(.btn-outline).dropdown-toggle,.btn.yellow:not(.btn-outline):active:focus, .btn.yellow:not(.btn-outline):active:hover {
+.portlet-body .btn.yellow:not(.btn-outline).active, .btn.yellow:not(.btn-outline):active, .btn.yellow:not(.btn-outline):hover, .open>.btn.yellow:not(.btn-outline).dropdown-toggle,.btn.yellow:not(.btn-outline):active:focus, .btn.yellow:not(.btn-outline):active:hover,.btn.yellow:not(.btn-outline) {
 	color: #fff;
-	background-color: #c49f47;
-	border-color: #c49f47;
+	background-color: #DA7C19;
+	border-color: #DA7C19;
 	outline-offset:0;
 }
 .portlet-body .btn:not(.md-skip):active,.portlet-body .btn:not(.md-skip):focus,.portlet-body .btn:not(.md-skip){
@@ -406,18 +406,17 @@ div.dataTables_wrapper div.dataTables_paginate{
 }
 dl.patac-temp{
     list-style: none;
-    margin-left: 18px;
 }
 .patac-temp>dd{
     float:left;
     padding: 0;
     -webkit-margin-start:0px;
-    margin:0 5px;
+    margin:0 3px;
 }
 .patac-temp>dd>span{
     color: #fff;
     text-align: center;
-    padding: 2px 4px;
+    padding: 2px 0px;
     display: block;
 }
 .patac-temp>dd>.temp{
@@ -428,4 +427,13 @@ dl.patac-temp{
     font-size: 16px;
     border-radius: 1.5px;
     white-space:nowrap;
+}
+.patac-temp>dd>.red {
+	color:#fff;
+	background: #e35b5a;
+}
+/*结构实验室*/
+.portlet>.portlet-title>.caption {
+	font-size: 16px;
+	white-space:nowrap;
 }
