--- a/dashboard/views/admin-log.html
+++ b/dashboard/views/admin-log.html
@@ -31,7 +31,7 @@
                             <th> 设备号</th>
                             <th> 设备名称</th>
                             <th> 通知邮箱 </th>
-                            <th> 是否有效 </th>
+                            <th> 报警是否可用</th>
                             <th> 操作</th>
                         </tr>
                     </thead>
