--- a/dashboard/views/bep.html
+++ b/dashboard/views/bep.html
@@ -41,7 +41,7 @@
                 <div class="portlet patac-portlet">
                 <div class="portlet-title">
                     <div class="caption">
-                        <span class="caption-subject font-white uppercase">设备七天停启状态 </span>
+                        <span class="caption-subject font-white uppercase">设备停启状态 </span>
                     </div>
                 </div>
                 <div class="portlet-body">
@@ -56,7 +56,7 @@
 
             <div class="col-md-6">
                 <div class="portlet patac-portlet">
-                <div class="portlet-title">
+                <div class="portlet-title"  style=" margin-bottom:0px;">
                     <div class="caption">
                         <span class="caption-subject font-white uppercase">工况参数</span>
                     </div>
@@ -66,9 +66,9 @@
                     <table class="hpu-table">
                         <thead>
                             <tr>
-                                <th width="33%">转速度</th>
-                                <th width="33%">风速</th>
-                                <th width="33%">牵引力</th>
+                                <th width="33%">Roll Speed</th>
+                                <th width="33%">Fan Speed</th>
+                                <th width="33%">Tractive Power</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -79,8 +79,10 @@
                             </tr>
                         </tbody>
                     </table>
+                    <div style="position: absolute;top:138px;left:26px;color: #fff;font-size: 16px;"><span>Tractive Power</span></div>
+                    <div id="bar1" style="height:215px;">
 
-                    <div id="bar1" style="height:215px;"></div>
+                    </div>
                 </div>
                 </div>
             </div>
@@ -90,7 +92,7 @@
     
     <div class="col-md-4">
 
-        <div class="portlet patac-portlet ">
+        <div class="portlet patac-portlet " style="padding: 7px 20px 2px;">
             <div class="portlet-title">
                 <div class="caption">
                     <span class="caption-subject font-white uppercase">试验参数</span>
@@ -124,13 +126,13 @@
                 <table class="hpu-table table-condensed">
                     <thead>
                     <tr>
-                        <th width="50%">坡度</th>
-                        <th width="50%">车辆重量</th>
+                        <th width="50%">Grade</th>
+                        <th width="50%">ETW Class</th>
                     </tr>
                     </thead>
                     <tbody>
                     <tr>
-                        <td><div class="hpu-label"><span ng-bind="getIndexMomentBEP.grade | number:2"></span></div></td>
+                        <td><div class="hpu-label"><span ng-bind="getIndexMomentBEP.grade | number:2"></span>%</div></td>
                         <td><div class="hpu-label"><span ng-bind="getIndexMomentBEP.vehicleWeight | number:2"></span>kg</div></td>
 
                     </tr>
@@ -140,10 +142,10 @@
             </div>
         </div>
 
-        <div class="portlet patac-portlet">
-            <div class="portlet-title">
+        <div class="portlet patac-portlet" style="padding: 6px 20px 1px;">
+            <div class="portlet-title" >
                 <div class="caption">
-                    <span class="caption-subject uppercase font-white">道路系数 </span>
+                    <span class="caption-subject uppercase font-white">Roadload Coefficicents </span>
                 </div>
                 
             </div>
@@ -153,19 +155,12 @@
                     <thead>
                         <tr>
                             <th>  </th>
-                            <th> A </th>
-                            <th> B </th>
-                            <th> C </th>
+                            <th> A</br>(N) </th>
+                            <th> B</br>(N/(km/h)) </th>
+                            <th> C</br>(N/(km/h)^2) </th>
                         </tr>
                     </thead>
                     <tbody>
-                        <tr class="odd gradeX" >
-                            <td> Dyno Set </td>
-                            <td> {{getIndexMomentBEP.coefA | number:2}} </td>
-                            <td> {{getIndexMomentBEP.coefB | number:2}} </td>
-                            <td> {{getIndexMomentBEP.coefC | number:2}} </td>
-                        </tr>
-
                         <tr class="odd gradeX" >
                             <td> Target </td>
                             <td> {{getIndexMomentBEP.targetA | number:2}} </td>
@@ -173,10 +168,18 @@
                             <td> {{getIndexMomentBEP.targetC | number:2}} </td>
                         </tr>
                         <tr class="odd gradeX" >
-                            <td> Vehicle Loss</td>
+                            <td> Dyno Set </td>
                             <td> {{getIndexMomentBEP.targetA - getIndexMomentBEP.coefA | number:2}} </td>
                             <td> {{getIndexMomentBEP.targetB - getIndexMomentBEP.coefB | number:2}} </td>
                             <td> {{getIndexMomentBEP.targetC - getIndexMomentBEP.coefC | number:2}} </td>
+
+                        </tr>
+
+                        <tr class="odd gradeX" >
+                            <td> Vehicle Loss</td>
+                            <td> {{getIndexMomentBEP.coefA | number:2}} </td>
+                            <td> {{getIndexMomentBEP.coefB | number:2}} </td>
+                            <td> {{getIndexMomentBEP.coefC | number:2}} </td>
                         </tr>
                         
                     </tbody>
