--- a/dashboard/views/hpu.html
+++ b/dashboard/views/hpu.html
@@ -38,7 +38,7 @@
                 <div class="portlet-body">
                     <div>
 
-                    <span style="color:#dc302e;line-height:100px;display:block;margin:0 40px;font-size:24px;text-align:center;font-size:60px;font-weight:bold;">停 止</span>
+                    <span style="color:#31A82C;line-height:100px;display:block;margin:0 40px;font-size:24px;text-align:center;font-size:60px;font-weight:bold;">运 行</span>
                     </div>
 
                     <div id="bar2" style="height:200px;"></div>
@@ -111,7 +111,7 @@
                                 <tr>
                                     <th width="25%">环境温度</th>
                                     <th width="25%">水压</th>
-                                    <th width="25%">油压</th>
+                                    <th width="25%">油液压力</th>
                                     <th width="25%">水饱和度</th>
                                 </tr>
                             </thead>
@@ -154,7 +154,7 @@
         <div class="portlet patac-portlet " style="height: 400px">
             <div class="portlet-title">
                 <div class="caption">
-                    <span class="caption-subject font-white uppercase">水口温度</span>
+                    <span class="caption-subject font-white uppercase">冷却水温度</span>
                 </div>
                 
             </div>
@@ -202,7 +202,7 @@
         <div class="portlet patac-portlet " style="height: 400px">
             <div class="portlet-title">
                 <div class="caption">
-                    <span class="caption-subject font-white uppercase">油口温度</span>
+                    <span class="caption-subject font-white uppercase">液压油温度</span>
                 </div>
                 
             </div>
