--- a/dashboard/views/mts.html
+++ b/dashboard/views/mts.html
@@ -2,6 +2,9 @@
     table.dataTable tbody th, table.dataTable tbody td {
         padding:2px 2px;
     }
+    .table-scrollable tbody>tr>td {
+        white-space: nowrap;
+    }
 </style>
 <!-- BEGIN PAGE CONTENT-->
 <div class="row">
@@ -25,7 +28,7 @@
                 <div class="portlet patac-portlet" style="height:400px;">
                 <div class="portlet-title">
                     <div class="caption">
-                        <span class="caption-subject font-white uppercase">设备七天停启状态</span>
+                        <span class="caption-subject font-white uppercase">设备停启状态</span>
                     </div>
                 </div>
                 <div class="portlet-body">
@@ -51,7 +54,7 @@
                             <a id="hoverBtn" class="btn btn-sm white btn-outline btn-circle" href="javascript:;" data-toggle="dropdown" data-hover="dropdown" data-close-others="true"> 通道
                                 <i class="fa fa-angle-down"></i>
                             </a>
-                            <div class="dropdown-menu hold-on-click dropdown-checkboxes pull-right" id="CHList">
+                            <div class="dropdown-menu hold-on-click dropdown-checkboxes pull-right" style="overflow-y: auto;max-height: 340px;" id="CHList">
                                 <label ng-repeat="ch in chList" >
                                     <input type="checkbox" data-id="{{ch}}"/> CH{{ch}}</label>
                                 
@@ -60,11 +63,11 @@
                     </div>
                 </div>
                 <div class="portlet-body">
-                    <div style="height:130px;max-width:380px;position: relative;top:-20px;">
-                        <dl class="patac-temp">
+                    <div style="height:130px;max-width:420px;position: relative;top:-20px;left:-9px;">
+                        <dl class="patac-temp" style="width: 110%;">
                             <dd ng-repeat="ch in chShowList">
                                 <span>CH{{ch.channelCode}}</span>
-                                <span class="temp" >{{ch.temp}}<span style="font-size:14px ">°C</span></span><br/>
+                                <span class="temp" ng-class="{true:'red',false:''}[ch.alarm==1]">{{ch.temp}}<span style="font-size:14px ">°C</span></span><br/>
                             </dd>
                         </dl>
                     
@@ -94,8 +97,8 @@
                 <table class="table table-striped table-bordered  order-column m-t-lg hide" id="station">
                     <thead>
                         <tr>
-                            <th> 时间 </th>
-                            <th> 日志信息 </th>
+                            <th> Time </th>
+                            <th> Log </th>
                             
                         </tr>
                     </thead>
@@ -109,7 +112,7 @@
                         
                     </tbody>
                 </table>
-                
+
             </div>
         </div>
 
@@ -139,10 +142,11 @@
                     <thead>
                         <tr>
                             <!-- <th> 报警信息 </th> -->
-                            <th> 时间 </th>
-                            <th> 设备号 </th>
-                            <th> 当前值 </th>
-                            <th> 报警阈值 </th>
+                            <th> Time </th>
+                            <th> Sequence </th>
+                            <th> Channel </th>
+                            <th> CurrentValue </th>
+                            <th> LimitValue </th>
                             
                         </tr>
                     </thead>
@@ -150,10 +154,12 @@
                         <tr class="odd gradeX" ng-repeat="data in rpc" on-repeat-finished2>
                             <!-- <td ng-bind="data.sequence"> shuxer </td> -->
                             <td ng-bind="data.time | moment:'fromNow' "></td>
-                            <td ng-bind="data.equipNo"> shuxer </td>
+                            <td ng-bind="data.sequence" style="white-space:normal"> shuxer </td>
+                            <td ng-bind="data.channel"> shuxer </td>
                             <td ng-bind="data.currentValue | number:2"> shuxer </td>
                             <td ng-bind="data.limitValue | number:2"> shuxer </td>
-                            
+
+
 
                         </tr>
                     </tbody>
