--- a/dashboard/views/admin-user.html
+++ b/dashboard/views/admin-user.html
@@ -96,9 +96,10 @@
                                         <div class="col-md-4 col-sm-4">
                                             <div class="form-group form-md-line-input">
                                                 <input type="text" class="form-control" id="email" name="email" placeholder="请输入电子邮箱"
-                                                ng-model="data.email" >
+                                                ng-model="data.email">
                                                 <label for="email">电子邮箱
                                                 </label>
+                                                <error-msg></error-msg>
                                             </div>
                                         </div>
                                     </div>
