--- a/dashboard/views/admin-log.html
+++ b/dashboard/views/admin-log.html
@@ -98,6 +98,7 @@
                                     <div class="form-group form-md-line-input">
                                         <textarea rows="4" class="form-control" id="email" name="email" rows="3" ng-model="temp.email" email></textarea>
                                         <label for="email">通知邮箱</label>
+                                        <error-msg></error-msg>
                                     </div>
                                 </div>
                                 </div>
