--- a/dashboard/views/hpu.html
+++ b/dashboard/views/hpu.html
@@ -199,7 +199,7 @@
 
         </div>
 
-        <div class="portlet patac-portlet " style="height: 400px">
+        <div class="portlet patac-portlet " style="height: 400px;">
             <div class="portlet-title">
                 <div class="caption">
                     <span class="caption-subject font-white uppercase">液压油温度</span>
